# libpeer

./: .gitignore  BUILD.md  CMakeLists.txt
cmake/unity/: CMakeLists.txt
examples/generic/: main.c
scripts/: build_all.sh  build_android.sh  build_ios.sh  build_macos.sh  create_fat_library.sh  create_fat_library_ios.sh
src/: peer_signaling.c  tcp_transport.c  tcp_transport.h
upm/jp.co.mixi.libpeer/: README.md  package.json
upm/jp.co.mixi.libpeer/Plugins/Android/: AndroidManifest.xml
upm/jp.co.mixi.libpeer/Plugins/iOS/libpeer.xcframework/: Info.plist
upm/jp.co.mixi.libpeer/Plugins/macOS/libpeer.bundle/Contents/: Info.plist
upm/jp.co.mixi.libpeer/Runtime/: LibPeer.cs
